assets/css/style.css
body {
    height: 100%;
    background-color: #ffffff !important;
    font-family: "Asap", sans-serif;
    color: #989898;
    margin-top: 20px;
    font-size: 16px;
    min-width: 540px;
    min-height: 580px;
}

img {
    margin-left: auto;
    margin-right: auto;
    display: block;
    cursor: pointer;
}

#otinanai {
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
}

.stilesa {
    height: -webkit-fill-available;
    position: absolute;
    left: 0%;
    cursor: url("../left.svg"), auto;
}

.closeButton {
    height: 90px;
    width: 180px;
    margin-left: auto;
    cursor: pointer;
    background-image: url("../close.svg");
    background-position: center;
    background-repeat: no-repeat;
}

.stilesb {
    height: -webkit-fill-available;
    position: absolute;
    right: 0%;
    cursor: url("../right.svg"), auto;
}

.icon img {
    max-width: 30px;
    display: inline;
}

.thumbnail img {
    min-width: 90%;
}

#myPhoto {
    max-height: 90vh;
    cursor: unset;
}

ul {
    display: inline;
}

hr {
    height: 6px;
    width: -webkit-fill-available;
    background: url(../line.png)repeat-x 0 0;
    border: 0;
}

.h1 {
    font-size: 220%;
    font-family: 'Philosopher', sans-serif;
}

.card {
    width: fit-content;
}

.collapse a {
    font-size: 20px;
    font-family: 'Philosopher', sans-serif;
}

.active-page {
    color: rgba(0, 0, 0, 0.8)!important;
}

.dropdown-item {
    color: rgba(0, 0, 0, 0.5);
}

.dropdown-item:hover {
    color: rgba(0, 0, 0, 0.7)!important;
    background-color: unset;
}

.dropdown-item:active {
    background-color: unset;
}

.dropdown-item:focus {
    background-color: unset;
    color: rgba(0, 0, 0, 0.7)!important;
}

.navbar {
    padding-top: 0px;
}

.navbar-brand {
    font-size: 50px;
}

.gallery-container h1 {
    font-family: 'Philosopher', sans-serif;
}

.row {
    margin: 15px;
    margin-top: 0px;
}

.thumbnail {
    margin-top: 20px;
}

.my-gallery .thumbnail:hover {
    transform: translateY(-10px) scale(1.02);
}

.caption {
    padding: 26px 30px;
    text-align: center;
}

.my-gallery .caption h3 {
    font-size: 20px;
    font-weight: bold;
    margin-top: 0;
    font-family: 'Philosopher', sans-serif;
}

.my-gallery .caption p {
    font-size: 12px;
    color: #7b7d7d;
    margin: 0;
}

.caption h3 {
    margin-bottom: 12px;
}

.photo-container {
    padding-top: 50px;
    padding-left: 150px;
}

.page-top {
    margin-top: 80px;
}

@media only screen and (max-width: 991px) {
    /* your mobile css, change this as you please */
    .navbar {
        background-color: #f8f9fa!important;
    }
}

.collapsing {
    transition-duration: 1ms;
}

#mymail {
    color: rgba(0, 0, 0, 0.5);
}

